# hts-lora

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
adapters/: adapter_config.json
configs/: data.yaml  eval.yaml  eval_atlas_base.yaml  eval_atlas_v1.yaml  eval_base.yaml  export.yaml  train.yaml  train_mlx.yaml  train_mlx_full.yaml  train_v100_8x.yaml
data/samples/: inference_input.json  rerank_examples.jsonl  tier_demo.py  walkthrough.py  walkthrough_raw.jsonl
docker/: README.md
docker/cuda/: Dockerfile  entrypoint.sh
docker/wrapper/: Dockerfile
docs/: layer-a-followup-usitc.md  log-2026-04-05-phase2.md  log-2026-04-06-h100-training.md  log-2026-06-04-v1-eval-suite.md  paper-v1-arxiv.md  paper-v1.md  serving-plan.md  training-plan-ministral.md  training-plan.md  v2-requirements.md
scripts/: apply_stat_suffix_validator.py  build_atlas_eval.py  build_stat_suffix_index.py  convert_hf_adapter_to_mlx.py  eval_mlx_slice.py  eval_pilot_predictions.py  export_cross_rulings.py  extract_rulings.py  lambda_setup.sh  run_data_prep.py  run_eval.py  run_eval_v1_cuda.sh  run_export.py  run_pilot_mlx.py  run_serve_api.py  run_serve_mlx.py  run_train.py  smoke_test_serve.py
src/hts_lora/: __init__.py  __main__.py
src/hts_lora/data/: audit.py  build_examples.py  formatters.py  ingest.py  normalize.py  split.py
src/hts_lora/export/: models.py  (+6 more)
tests/: conftest.py  test_batch_predict.py  test_export.py  test_formatters.py  test_hts_codes.py  test_metrics.py  test_normalize.py  test_parse_output.py  test_serving.py  test_split.py  test_stat_suffix.py
(+26 files in other folders)
